[gd_scene load_steps=12 format=2]

[ext_resource path="res://Escenas/Menu/Botones/Salir.tscn" type="PackedScene" id=1]
[ext_resource path="res://Escenas/Menu/Botones/Tienda.tscn" type="PackedScene" id=2]
[ext_resource path="res://Escenas/Menu/CambioEscena.tscn" type="PackedScene" id=3]
[ext_resource path="res://Recursos/botonSonido.png" type="Texture" id=4]
[ext_resource path="res://Escenas/Menu/Botones/Jugar.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/PantallaMenu.gd" type="Script" id=6]
[ext_resource path="res://Recursos/fondos/FondoMenu.png" type="Texture" id=7]
[ext_resource path="res://Recursos/BGM/Arex's Beat.ogg" type="AudioStream" id=8]
[ext_resource path="res://Escenas/Menu/Botones/BotonTiendaOnline.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://fuentes/snow_kei/Snow Kei.ttf"

[sub_resource type="DynamicFont" id=2]
size = 89
outline_color = Color( 0.972549, 0.654902, 0.101961, 1 )
font_data = SubResource( 1 )

[node name="PantallaMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fondo" type="TextureRect" parent="."]
self_modulate = Color( 1, 1, 1, 0.862745 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -2.0
margin_bottom = -1.0
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -390.161
margin_top = -165.515
margin_right = 428.839
margin_bottom = 267.485
custom_constants/separation = 20
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Jugar" parent="Menu" instance=ExtResource( 5 )]
anchor_left = 0.0
anchor_right = 0.0
margin_left = 0.0
margin_right = 819.0
rect_clip_content = false
size_flags_horizontal = 1
size_flags_vertical = 1
scene_to_load = "res://Escenas/MenuUnJugador.tscn"

[node name="Online" parent="Menu" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_right = 0.0
margin_left = 0.0
margin_top = 110.0
margin_right = 819.0
margin_bottom = 200.0
rect_clip_content = false
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Tienda" parent="Menu" instance=ExtResource( 9 )]
anchor_left = 0.0
anchor_right = 0.0
margin_left = 0.0
margin_top = 220.0
margin_right = 819.0
margin_bottom = 323.0
scene_to_load = "res://Escenas/Menu/EscenaTiendaOnline.tscn"

[node name="Salir" parent="Menu" instance=ExtResource( 1 )]
anchor_left = 0.0
anchor_right = 0.0
margin_left = 0.0
margin_top = 343.0
margin_right = 819.0
margin_bottom = 433.0
rect_clip_content = false
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="CambioEscena" parent="." instance=ExtResource( 3 )]
visible = false

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -555.5
margin_right = 555.5
margin_bottom = 103.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.737255, 0.109804, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "PINGUINOS EN GUERRA"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicaFondo" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="BotonMute" type="TextureButton" parent="."]
margin_left = 1177.03
margin_top = 619.961
margin_right = 1689.03
margin_bottom = 1131.96
rect_scale = Vector2( 0.15, 0.15 )
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Menu/Jugar" to="." method="_on_Jugar_pressed"]
[connection signal="pressed" from="Menu/Online" to="." method="_on_Online_pressed"]
[connection signal="pressed" from="Menu/Salir" to="." method="_on_Salir_pressed"]
[connection signal="fade_finished" from="CambioEscena" to="." method="_on_CambioEscena_fade_finished"]
[connection signal="pressed" from="BotonMute" to="." method="_on_BotonMute_pressed"]
